# polydrive

./: .editorconfig  .gitignore  CHANGELOG.BSL  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: demo-output.md
examples/: README.md  automotive_terms.csv  bug_report_zh.json
examples/bad_encoding/: gb2312_file.cpp  shift_jis_file.cpp  utf8_with_bom.cpp
examples/cpp_project/: dashboard.cpp  instrument_cluster.cpp
examples/locales/: en.json
src/polydrive/: __init__.py  __main__.py  api.py  cli.py
src/polydrive/core/: _models.py
src/polydrive/core/config/: __init__.py  settings.py
src/polydrive/core/models/: __init__.py
src/polydrive/defect_guard/: __init__.py  analyzer.py  nlp_quality.py  template.py
src/polydrive/glossary/: __init__.py  csv_adapter.py  extractor.py  tbx_parser.py
src/polydrive/i18n_guard/: __init__.py  encoding.py  hardcoded.py  pseudolocal.py
src/polydrive/metrics/: __init__.py  collector.py  prometheus.py
src/polydrive/mt_gateway/: __init__.py  cache.py  engine_base.py  gateway.py  glossary_enforcer.py
src/polydrive/mt_gateway/engines/: __init__.py  amazon.py  deepl_engine.py  google.py  libretranslate.py
src/polydrive/trace/: __init__.py  aspice.py  gherkin_sync.py  semantic.py  unece.py
tests/: conftest.py  test_api.py  test_cli.py  test_examples.py
tests/fixtures/: automotive_sample.tbx  gb2312_sample.txt  hardcoded_sample.cpp  locale_en.json  login.feature  login_zh.feature  sample_qt.ts  utf8_bom_sample.txt  utf8_clean_sample.txt
tests/test_core/: test_config.py
tests/test_defect_guard/: test_analyzer.py
tests/test_glossary/: test_tbx_parser.py
tests/test_i18n_guard/: test_encoding.py  test_hardcoded.py  test_pseudolocal.py
tests/test_metrics/: test_collector.py
tests/test_mt_gateway/: test_gateway.py
tests/test_trace/: test_aspice.py  test_gherkin_sync.py  test_unece.py
