[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polydrive"
version = "0.1.0"
description = "Language governance toolkit for multinational automotive testing teams"
readme = "README.md"
license = { text = "Business Source License 1.1 – see LICENSE file" }
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "PolyDrive Contributors" },
]
keywords = [
    "cli",
    "i18n",
    "l10n",
    "translation",
    "glossary",
    "terminology",
    "tbx",
    "automotive",
    "testing",
    "aspice",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Internationalization",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "lxml>=5.0.0",
    "charset-normalizer>=3.0.0",
    "langdetect>=1.0.9",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
ml = [
    "spacy>=3.7.0",
    "sentence-transformers>=3.0.0",
    "keybert>=0.8.0",
]

[project.scripts]
polydrive = "polydrive.cli:app"

[project.urls]
Homepage = "https://github.com/BUNSEI1212/polydrive"
Repository = "https://github.com/BUNSEI1212/polydrive"
Issues = "https://github.com/BUNSEI1212/polydrive/issues"
Documentation = "https://github.com/BUNSEI1212/polydrive#documentation"
Changelog = "https://github.com/BUNSEI1212/polydrive/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    { include-group = "tests" },
    { include-group = "lint" },
]
tests = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "coverage[toml]>=7.0",
]
lint = [
    "ruff>=0.9.0",
    "mypy>=1.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/polydrive"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::FutureWarning",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::ImportWarning",
]
addopts = ["-ra", "--strict-markers", "--import-mode=importlib"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = true

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]

[tool.coverage.run]
branch = true
source = ["src/polydrive"]
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    'if __name__ == "__main__":',
]
